infra/environments/dev/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: releaseforge-app
  namespace: releaseforge
  labels:
    app: releaseforge-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: releaseforge-app
  template:
    metadata:
      labels:
        app: releaseforge-app
    spec:
      containers:
        - name: releaseforge-app
          image: subodhmore/releaseforge-app:e192afafcfa3cfdca45f6a690c0afed391667829
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: {}
        - set  strategy:
    canary:
      stableService: releaseforge-app
      canaryService: releaseforge-app-canary
      trafficRouting:
        nginx:
          stableIngress: releaseforge-ingress
      steps:
        - setWeight: 10
        - pause: { duration: 30 }
        - setWeight: 25
        - pause: { duration: 30 }
        - setWeight: 50
        - pause: { duration: 30 }
        - setWeight: 100
